Revamped Server list

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="cards__card card">
           <h2 class="card__heading">Updates</h2>
           <ul role="list" class="card__bullets flow">
-            <a href="/more/updates.html"><strong>NEW UPDATE LIVE</strong></a>
+            <a href="/more/updates.html"><strong>NEW SERVER LIST</strong></a>
             <br>
-            <a href="/more/updates.html"><strong>(1/9/24)</strong></a>
+            <a href="/more/updates.html"><strong>(1/13/24)</strong></a>
           </ul>        
         </div> 
         
