--- a/more/blogs.html
+++ b/more/blogs.html
@@ -54,13 +54,13 @@
           <a href="/blogs/bestfps.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
 
-        <div class="cards__card card">
+        <!-- <div class="cards__card card">
           <h2 class="card__heading">Eaglercraft bugs and issues</h2>
           <ul role="list" class="card__bullets flow">
             <li>How to fix certain bugs.</li>
           </ul>
           <a href="/blogs/issue.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
-        </div>
+        </div> -->
 
         <div class="cards__card card">
           <h2 class="card__heading">Links</h2>
