--- a/test/save.html
+++ b/test/save.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/test/test.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/cb7290d6de.js" crossorigin="anonymous"></script>
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
@@ -41,8 +41,61 @@
 </head>
 
 <body>
-
   
+  <h2>Animated Modal with Header and Footer</h2>
 
-</body>
+  <!-- Trigger/Open The Modal -->
+  <button id="myBtn">Open Modal</button>
+  
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+  
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <h2>Modal Header</h2>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the Modal Body</p>
+        <p>Some other text...</p>
+      </div>
+      <div class="modal-footer">
+        <h3>Modal Footer</h3>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+  <script>
+    // thanks w3schools
+    var modal = document.getElementById("myModal");
+    var btn = document.getElementById("myBtn");
+    var span = document.getElementsByClassName("close")[0];
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    
+
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+    </script>
+
+
+
+
+  </body>
 </html>
