pvp club server java

--- a/servers.html
+++ b/servers.html
@@ -120,7 +120,7 @@
       checkServerStatus("asianf4rmer.minecraft.pe", status7);
       checkServerStatus("asianf4rmer.minecraft.pe", status8);
       checkServerStatus("", status9);
-      checkServerStatus("play.pvpclub.xyz", status10);
+      checkServerStatus("pvpclub.xyz", status10);
       checkServerStatus("", status11);
       checkServerStatus("", status12);
       checkServerStatus("java.craftclue.rocks", status13);
