--- a/servers.html
+++ b/servers.html
@@ -259,7 +259,7 @@
     <div class="box box10">
       <div class="title title10">PvP Club</div>
       <div class="status status10"></div>
-      <div class="description description10">Survival, PvP</div>
+      <div class="description description10">Survival, PvP, Crystal FFA</div>
       <div class="ip ip10" onclick="copyIP()">Copy IP</div>
     </div>
     <div class="box box11">
