--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
           <h2 class="card__heading">Partners</h2>
           <ul role="list" class="card__bullets flow">
             <li><a href="https://discord.gg/QApTQFmbAZ"><strong>InterLink</strong></a></li>
-            <li><a href="/404.html"><strong>Soon...</strong></a></li>
+            <li><a href="https://discord.gg/uTDfe3495X"><strong>Eaglercraft Support Plugins And More</strong></a></li>
+            <li><a href=" https://discord.gg/bCRX99sptN"><strong>PvP Club</strong></a></li>
           </ul>
         </div>
       </div>
