ayun + shadoe 3.0 beta

--- a/1.5.html
+++ b/1.5.html
@@ -101,6 +101,15 @@
         </div>
 
         <div class="cards__card card">
+          <h2 class="card__heading">Ayuncraft</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Version: Ayuncraft Web</li>
+          </ul>
+          <a href="/clients/1.5/ayuncraft/index.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/ayuncraft/index.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
           <h2 class="card__heading">Precision Client</h2>
           <ul role="list" class="card__bullets flow">
             <li>Version: beta_0.1.8.4</li>
