--- a/1.8.html
+++ b/1.8.html
@@ -85,10 +85,10 @@
       <div class="cards__card card">
         <h2 class="card__heading">Shadow Client</h2>
         <ul role="list" class="card__bullets flow">
-          <li>Version: idk</li>
+          <li>Version: Shadow Client 3.0 Beta</li>
         </ul>
-        <a href="/clients/1.8/ShadowClient.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
-        <a href="/clients/1.8/ShadowClient.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        <a href="/clients/1.8/ShadowClient30Beta.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/ShadowClient30Beta.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
 
       <div class="cards__card card">
