--- a/packs.html
+++ b/packs.html
@@ -175,7 +175,7 @@
   </main>
   <br>
   <br>
-  <h1 class="h1b" style="text-align:center;">I do NOT own any of these texture packs.</h1>
+  <h1 class="h1b" style="text-align:center;">I did NOT make any of these texture packs.</h1>
   <br>
   </body>
 </html>
