Renamed in the client selection
renamed koneclient

--- a/1.8.html
+++ b/1.8.html
@@ -60,8 +60,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Version: Kone CLient 1.8</li>
         </ul>
-        <a href="/clients/1.8/Koneclient-1.8.8/index.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
-        <a href="/clients/1.8/Koneclient-1.8.8/index.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        <a href="/clients/1.8/Koneclient/index.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/Koneclient/index.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
 
       <div class="cards__card card">
