--- a/1.8.html
+++ b/1.8.html
@@ -58,7 +58,7 @@
       <div class="cards__card card">
         <h2 class="card__heading">Kone Client</h2>
         <ul role="list" class="card__bullets flow">
-          <li>Version: Kone CLient 1.8</li>
+          <li>Version: Kone Client 1.8</li>
         </ul>
         <a href="/clients/1.8/Koneclient/index.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
         <a href="/clients/1.8/Koneclient/index.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
