--- a/servers.html
+++ b/servers.html
@@ -96,7 +96,6 @@
       const status4 = document.querySelector(".status4");
       const status5 = document.querySelector(".status5");
       const status6 = document.querySelector(".status6");
-      const status7 = document.querySelector(".status7");
       const status8 = document.querySelector(".status8");
       const status9 = document.querySelector(".status9");
       const status10 = document.querySelector(".status10");
@@ -117,9 +116,9 @@
       checkServerStatus("legxndsmp.minecraft.pe", status4);
       checkServerStatus("play.ggsmp.net", status5);
       checkServerStatus("Java.clever-teaching.com", status6);
-      checkServerStatus("asianf4rmer.minecraft.pe", status7);
+  
       checkServerStatus("asianf4rmer.minecraft.pe", status8);
-      checkServerStatus("", status9);
+      checkServerStatus("play.verise.xyz", status9);
       checkServerStatus("pvpclub.xyz", status10);
       checkServerStatus("", status11);
       checkServerStatus("", status12);
@@ -150,8 +149,6 @@
       document.querySelector(".ip6").addEventListener("click", function () {
         copyIP("wss://clever-teaching.com/web/");
       });
-      document.querySelector(".ip7").addEventListener("click", function () {
-        copyIP("wss://asianf4rmer.minecraft.pe");
       });
       document.querySelector(".ip8").addEventListener("click", function () {
         copyIP("wss://asianf4rmer.minecraft.pe");
@@ -237,12 +234,6 @@
       <div class="status status6"></div>
       <div class="description description6">Survival</div>
       <div class="ip ip6" onclick="copyIP()">Copy IP</div>
-    </div>
-    <div class="box box7">
-      <div class="title title7">Asianf4rmer smp</div>
-      <div class="status status7"></div>
-      <div class="description description7">Survival</div>
-      <div class="ip ip7" onclick="copyIP()">Copy IP</div>
     </div>
     <div class="box box8">
       <div class="title title8">Asianf4rmer smp</div>
