--- a/servers.html
+++ b/servers.html
@@ -96,6 +96,7 @@
       const status4 = document.querySelector(".status4");
       const status5 = document.querySelector(".status5");
       const status6 = document.querySelector(".status6");
+      const status7 = document.querySelector(".status7");
       const status8 = document.querySelector(".status8");
       const status9 = document.querySelector(".status9");
       const status10 = document.querySelector(".status10");
@@ -116,7 +117,7 @@
       checkServerStatus("legxndsmp.minecraft.pe", status4);
       checkServerStatus("play.ggsmp.net", status5);
       checkServerStatus("Java.clever-teaching.com", status6);
-  
+      checkServerStatus("", status7);
       checkServerStatus("asianf4rmer.minecraft.pe", status8);
       checkServerStatus("play.verise.xyz", status9);
       checkServerStatus("pvpclub.xyz", status10);
@@ -149,6 +150,8 @@
       document.querySelector(".ip6").addEventListener("click", function () {
         copyIP("wss://clever-teaching.com/web/");
       });
+      document.querySelector(".ip7").addEventListener("click", function () {
+        copyIP("wss://ricenetwork.neutine.net/");
       });
       document.querySelector(".ip8").addEventListener("click", function () {
         copyIP("wss://asianf4rmer.minecraft.pe");
@@ -235,6 +238,12 @@
       <div class="description description6">Survival</div>
       <div class="ip ip6" onclick="copyIP()">Copy IP</div>
     </div>
+        <div class="box box7">
+      <div class="title title7">Rice Network</div>
+      <div class="status status7"></div>
+      <div class="description description7">Crystal PVP, Duels, Survival, Minigames</div>
+      <div class="ip ip7" onclick="copyIP()">Copy IP</div>
+    </div>
     <div class="box box8">
       <div class="title title8">Asianf4rmer smp</div>
       <div class="status status8"></div>
@@ -248,9 +257,9 @@
       <div class="ip ip9" onclick="copyIP()">Copy IP</div>
     </div>
     <div class="box box10">
-      <div class="title title10">PvP Club</div>
+      <div class="title title10">PVP Club</div>
       <div class="status status10"></div>
-      <div class="description description10">Survival, PvP, Crystal FFA</div>
+      <div class="description description10">Survival, PVP, Crystal FFA</div>
       <div class="ip ip10" onclick="copyIP()">Copy IP</div>
     </div>
     <div class="box box11">
