--- a/1.3.html
+++ b/1.3.html
@@ -46,7 +46,7 @@
   <div class="cards cards">
     <div class="cards__inner">
         <div class="cards__card card">
-            <h2 class="card__heading">Classic</h2>
+            <h2 class="card__heading">Eaglercraft 1.3</h2>
             <ul role="list" class="card__bullets flow">
               <li>Updated: 11/21/23</li>
             </ul>
