--- a/1.5.html
+++ b/1.5.html
@@ -128,7 +128,7 @@
         </div>
 
         <div class="cards__card card">
-          <h2 class="card__heading">Classic</h2>
+          <h2 class="card__heading">Eaglercraft 1.5</h2>
           <ul role="list" class="card__bullets flow">
             <li>Version: Service Pack #1</li>
           </ul>
