--- a/1.8.html
+++ b/1.8.html
@@ -101,12 +101,12 @@
       </div>
 
       <div class="cards__card card">
-        <h2 class="card__heading">Classic</h2>
+        <h2 class="card__heading">Eaglercraft 1.8</h2>
         <ul role="list" class="card__bullets flow">
-          <li>Version: Shaders</li>
+          <li>Version: Most recent</li>
         </ul>
-        <a href="/clients/1.8/EaglercraftX_Shaders.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
-        <a href="/clients/1.8/EaglercraftX_Shaders.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        <a href="/clients/1.8/EaglercraftX" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/EaglercraftX" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
           <!-- End -->
     <div class="overlay cards__inner"></div>
