--- a/1.8.html
+++ b/1.8.html
@@ -105,8 +105,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Version: Most recent</li>
         </ul>
-        <a href="/clients/1.8/EaglercraftX" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
-        <a href="/clients/1.8/EaglercraftX" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        <a href="/clients/1.8/EaglercraftX.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/EaglercraftX.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
           <!-- End -->
     <div class="overlay cards__inner"></div>
