--- a/packs.html
+++ b/packs.html
@@ -154,7 +154,7 @@
         </div>
 
         <div class="cards__card card">
-          <img src="/assets/packs/war.png"" class="imgB">
+          <img src="/assets/packs/war.png" class="imgB">
           <ul role="list" class="card__bullets flow">
             <li><h2>War V2 32x</h2></li>
           </ul>
@@ -162,7 +162,116 @@
         </div>
 
         <div class="cards__card card">
-          <img src="/assets/error.png"" class="imgB">
+          <img src="/assets/packs/spiderman.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Spiderman 64x</h2></li>
+          </ul>
+          <a href="/packs/!               §4Spider§f-§1Man§4[§f§lPACK§1] §8.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/vaporwave.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Vaporwave 16x</h2></li>
+          </ul>
+          <a href="/packs/!         §6Vap§corw§5ave §1[§f16x§1].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/prism.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Prism 16x</h2></li>
+          </ul>
+          <a href="/packs/!      §fp§9rism §8[§f16§9x§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/wemmbu.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>WubeFault 16x</h2></li>
+          </ul>
+          <a href="/packs/5WubeFault_d16x.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/azure.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Azure 64x</h2></li>
+          </ul>
+          <a href="/packs/9Azure §f[64x].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/minimalistic.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Minimalistic 64x</h2></li>
+          </ul>
+          <a href="/packs/§4 Minimalistic 64x.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/tofault.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Tofault 16x</h2></li>
+          </ul>
+          <a href="/packs/!       §b§l§oTofault §f§l§o16x.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/tofault.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Tofault 16x</h2></li>
+          </ul>
+          <a href="/packs/!       §b§l§oTofault §f§l§o16x.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/amethyst.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Amethyst 16x</h2></li>
+          </ul>
+          <a href="/packs/!  §5amethyst §8[§f16§5x§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/excel.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Excel 16x</h2></li>
+          </ul>
+          <a href="/packs/! §9Excel 16x§8.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/danfault.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Danfault 16x</h2></li>
+          </ul>
+          <a href="/packs/! §b§l§oDanfault §f§l§o16x.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/eternity.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Eternity 16x Recolor</h2></li>
+          </ul>
+          <a href="/packs/! §aEter§2nity §8[§f16x§8] Black.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="cards__card card">
+          <img src="/assets/error.png" class="imgB">
           <ul role="list" class="card__bullets flow">
             <li><h2>Proofr's Crystals Overlay</h2></li>
           </ul>
