remove archimeds client

--- a/1.5.html
+++ b/1.5.html
@@ -116,16 +116,7 @@
           </ul>
           <a href="/clients/1.5/PrecisionClient.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
           <a href="/clients/1.5/PrecisionClient.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
-        </div>
-
-        <div class="cards__card card">
-          <h2 class="card__heading">Archimedes Client</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>Version: Archimedes Client Client</li>
-          </ul>
-          <a href="/clients/1.5/archimedes.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
-          <a href="/clients/1.5/archimedes.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
-        </div>
+        </div>s
 
         <div class="cards__card card">
           <h2 class="card__heading">Eaglercraft 1.5</h2>
